# figgie

./: README.md  package-lock.json
backend/: Cargo.toml
backend/src/figgie-core/: Cargo.toml
backend/src/figgie-core/src/: action.rs  engine.rs  event.rs  lib.rs  rules.rs  state.rs  types.rs  utils.rs
backend/src/figgie-server/: Cargo.toml
backend/src/figgie-server/src/: adapter.rs  app.rs  dispatcher.rs  main.rs  robots.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  config.tsx  index.css  main.tsx
frontend/src/constants/: dev.tsx
frontend/src/pages/: Game.css  Game.tsx  Home.tsx  Room.tsx
frontend/src/types/: game.tsx  player.tsx
