[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
figgie-core = { path = "src/figgie-core" }
futures = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
log = "0.4"

[[bin]]
name = "figgie-server"
path = "src/figgie-server/src/main.rs"
