[workspace]
members = [
    "src/figgie-server",
    "src/figgie-core"
]

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3"
log = "0.4"
